--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "@hono/vite-dev-server": "^0.18.2",
     "typescript": "^5.0.0",
+    "vercel": "^48.1.6",
     "vite": "^6.3.5",
     "wrangler": "^4.4.0"
   }
