--- a/package.json
+++ b/package.json
@@ -1,49 +1,16 @@
 {
-  "name": "webapp",
-  "type": "module",
+  "name": "nursery-management-system",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "dev:sandbox": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
-    "dev:d1": "wrangler pages dev dist --d1=nursery-db --local --ip 0.0.0.0 --port 3003",
-    "build": "vite build",
-    "preview": "wrangler pages dev dist",
-    "deploy": "npm run build && wrangler pages deploy dist --project-name nursery-management-system",
-    "deploy:prod": "npm run build && wrangler pages deploy dist --project-name nursery-management-system --env production",
-    "deploy:setup": "./deploy-setup.sh",
-    "db:setup:prod": "./setup-production-db.sh",
-    "db:migrate:prod": "wrangler d1 migrations apply nursery-db-production --remote",
-    "db:seed:prod": "wrangler d1 execute nursery-db-production --remote --file=./seed.sql",
-    "production:setup": "npm run db:setup:prod && npm run db:migrate:prod && npm run db:seed:prod",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
-    "clean-port": "fuser -k 3000/tcp 2>/dev/null || true",
-    "test": "curl http://localhost:3000",
-    "db:migrate:local": "wrangler d1 migrations apply nursery-db --local",
-    "db:seed": "wrangler d1 execute nursery-db --local --file=./seed.sql",
-    "db:reset": "rm -rf .wrangler/state/v3/d1 && npm run db:migrate:local && npm run db:seed",
-    "db:console:local": "wrangler d1 execute nursery-db --local",
-    "db:console:prod": "wrangler d1 execute nursery-db",
-    "git:init": "git init && git add . && git commit -m 'Initial commit'",
-    "git:commit": "git add . && git commit -m",
-    "git:status": "git status",
-    "git:log": "git log --oneline"
+    "start": "node server.js",
+    "db:check": "node scripts/db-check.js",
+    "db:reset": "node scripts/db-reset.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.2",
-    "firebase": "^12.2.1",
-    "firebase-admin": "^13.5.0",
-    "hono": "^4.9.6",
-    "joi": "^18.0.1",
-    "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "4.20250705.0",
-    "@hono/vite-build": "^1.2.0",
-    "@hono/vite-cloudflare-pages": "^0.4.2",
-    "@hono/vite-dev-server": "^0.18.2",
-    "typescript": "^5.0.0",
-    "vercel": "^48.1.6",
-    "vite": "^6.3.5",
-    "wrangler": "^4.4.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.1.6"
   }
 }
